--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>portfolio</title>
+  <title>shindy baba | portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
-  <h1>testing</h1>
-  <h2>test 1</h2>
+
+  <header class="header">
+    <a href="#" class="logo">shindy baba</a>
+
+    <nav class="navbar">
+      <a href="" class="active">Home</a>
+      <a href="">About</a>
+      <a href="">Services</a>
+      <a href="">Portfolio</a>
+      <a href="">Contact</a>
+    </nav>
+  </header>
+
+  <section class="home">
+    <div class="home-image">
+      <img src="img/profile.png" alt="">
+    </div>
+    <div class="home-content">
+      <h1>hi, my name is shindy baba</h1>
+      <h3>a frontend developer</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora numquam temporibus possimus, quisquam voluptate quia animi quae et aliquid illum fugiat velit, ipsa facilis accusantium sapiente iure repellendus iusto eum.</p>
+      <div class="home-sci">
+        <a href=""><i class='bx bxl-github'></i></a>
+        <a href=""><i class='bx bxl-linkedin-square' ></i></a>
+        <a href=""><i class='bx bx-envelope' ></i></a>
+        <a href=""><i class='bx bxl-whatsapp' ></i></a>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
