adjusted pixel on picture

--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
   <title>shindy baba | portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
   <link rel="icon" href="img/baba.png">
 
 </head>
 <body>
 
   <header class="header">
-    <a href="#" class="logo">shindy baba</a>
+    <a href="#" class="logo">ばば しんじ</a>
 
     <nav class="navbar">
-      <a href="" class="active">Home</a>
-      <a href="">About</a>
-      <a href="">Services</a>
-      <a href="">Portfolio</a>
-      <a href="">Contact</a>
+      <a href="" class="active">home</a>
+      <a href="">about</a>
+      <a href="">services</a>
+      <a href="">portfolio</a>
+      <a href="">contact</a>
     </nav>
   </header>
 
