fixed links on contact buttons

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <h3>a frontend developer</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora numquam temporibus possimus, quisquam voluptate quia animi quae et aliquid illum fugiat velit, ipsa facilis accusantium sapiente iure repellendus iusto eum.</p>
       <div class="home-sci">
-        <a href=""><i class='bx bxl-github'></i></a>
-        <a href=""><i class='bx bxl-linkedin-square' ></i></a>
-        <a href=""><i class='bx bx-envelope' ></i></a>
-        <a href=""><i class='bx bxl-whatsapp' ></i></a>
+        <a href="https://github.com/shindyhh" target="_blank"><i class='bx bxl-github'></i></a>
+        <a href="https://www.linkedin.com/in/babashinji/" target=”_blank”><i class='bx bxl-linkedin-square' ></i></a>
+        <a href="mailto:shindyhh@gmail.com"><i class='bx bx-envelope' ></i></a>
+        <a href="https://api.whatsapp.com/send?phone=818098830898" target=”_blank”><i class='bx bxl-whatsapp'></i></a>
       </div>
     </div>
   </section>
