edited paragraph and fixed header buttons

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 
     <nav class="navbar">
       <a href="" class="active">home</a>
-      <a href="">about</a>
-      <a href="">services</a>
       <a href="">portfolio</a>
       <a href="">contact</a>
     </nav>
@@ -30,9 +28,9 @@
       <img src="img/profile.png" alt="">
     </div>
     <div class="home-content">
-      <h1>hi, my name is shindy baba</h1>
-      <h3>a frontend developer</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora numquam temporibus possimus, quisquam voluptate quia animi quae et aliquid illum fugiat velit, ipsa facilis accusantium sapiente iure repellendus iusto eum.</p>
+      <h1>hi, my name is shindy</h1>
+      <h3>full-stack web developer</h3>
+      <p>i am a tokyo-based web developer, originally from brazil. <br>graduated from the le wagon web development bootcamp in june 2022<br>checkout my socials below</p>
       <div class="home-sci">
         <a href="https://github.com/shindyhh" target="_blank"><i class='bx bxl-github'></i></a>
         <a href="https://www.linkedin.com/in/babashinji/" target=”_blank”><i class='bx bxl-linkedin-square' ></i></a>
