added queries for responsiveness

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>shindy baba | portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/queries.css">
+
+
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
+
   <link rel="icon" href="img/baba.png">
 
 </head>
@@ -30,7 +34,7 @@
     <div class="home-content">
       <h1>hi, my name is shindy</h1>
       <h3>full-stack web developer</h3>
-      <p>i am a tokyo-based web developer, originally from brazil. <br>graduated from the le wagon web development bootcamp in june 2022<br>checkout my socials below</p>
+      <p>i am a tokyo-based web developer, originally from brazil<br>graduated from the le wagon web development bootcamp in june 2022<br>checkout my socials below</p>
       <div class="home-sci">
         <a href="https://github.com/shindyhh" target="_blank"><i class='bx bxl-github'></i></a>
         <a href="https://www.linkedin.com/in/babashinji/" target=”_blank”><i class='bx bxl-linkedin-square' ></i></a>
