--- a/index.html
+++ b/index.html
@@ -30,11 +30,28 @@
   <section class="home">
     <div class="home-image">
       <img src="img/profile.png" alt="">
+      <div class="wrapper">
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+      </div>
     </div>
     <div class="home-content">
-      <h1>hi, my name is shindy</h1>
-      <h3>full-stack web developer</h3>
-      <p>i am a tokyo-based web developer, originally from brazil<br>graduated from the le wagon web development bootcamp in june 2022<br>checkout my socials below</p>
+      <h1>hi, my name is <span class="sh">shindy</span></h1>
+      <h3>&#60;full-stack web developer&#62;</h3>
+      <p>i am a tokyo-based web developer, originally from brazil.<br>graduated from the le wagon web development bootcamp in june 2022.<br>checkout my socials below</p>
       <div class="home-sci">
         <a href="https://github.com/shindyhh" target="_blank"><i class='bx bxl-github'></i></a>
         <a href="https://www.linkedin.com/in/babashinji/" target=”_blank”><i class='bx bxl-linkedin-square' ></i></a>
