--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar">
       <a href="" class="active">home</a>
-      <a href="">portfolio</a>
+      <a href="#portfolio">portfolio</a>
       <a href="">contact</a>
     </nav>
   </header>
@@ -49,14 +49,28 @@
       </div>
     </div>
     <div class="home-content">
-      <h1>hi, my name is <span class="sh">shindy</span></h1>
-      <h3>&#60;full-stack web developer&#62;</h3>
+      <h1>hi, my name is <span class="light-blue">shindy</span></h1>
+      <h3><span class="light-blue">&#60;</span>full-stack web developer<span class="light-blue">&#62;</span></h3>
       <p>i am a tokyo-based web developer, originally from brazil.<br>graduated from the le wagon web development bootcamp in june 2022.<br>checkout my socials below</p>
       <div class="home-sci">
         <a href="https://github.com/shindyhh" target="_blank"><i class='bx bxl-github'></i></a>
         <a href="https://www.linkedin.com/in/babashinji/" target=”_blank”><i class='bx bxl-linkedin-square' ></i></a>
         <a href="mailto:shindyhh@gmail.com"><i class='bx bx-envelope' ></i></a>
         <a href="https://api.whatsapp.com/send?phone=818098830898" target=”_blank”><i class='bx bxl-whatsapp'></i></a>
+      </div>
+    </div>
+  </section>
+  <section class="portfolio" id="portfolio">
+    <div class="container">
+      <div class="wrapper-portfolio">
+        <div class="banner-image"></div>
+        <h1>coming soon</h1>
+        <p>Lorem ipsum dolor sit amet, <br/>
+          consectetur adipiscing elit.</p>
+      </div>
+      <div class="button-wrapper">
+        <button class="btn outline">github</button>
+        <button class="btn fill">preview</button>
       </div>
     </div>
   </section>
