added a second card in portfolio

--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
         <button class="btn fill">preview</button>
       </div>
     </div>
+    <div class="container">
+      <div class="wrapper-portfolio">
+        <div class="banner-image"></div>
+        <h1>coming soon</h1>
+        <p>Lorem ipsum dolor sit amet, <br/>
+          consectetur adipiscing elit.</p>
+      </div>
+      <div class="button-wrapper">
+        <button class="btn outline">github</button>
+        <button class="btn fill">preview</button>
+      </div>
+    </div>
   </section>
 </body>
 </html>
