changed colors to black and red

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <img src="img/profile.png" alt="">
     </div>
     <div class="home-content">
-      <h1>hi, my name is <span class="light-blue">shindy</span></h1>
-      <h3><span class="light-blue">&#60;</span>full-stack web developer<span class="light-blue">&#62;</span></h3>
+      <h1>hi, my name is <span class="red">shindy</span></h1>
+      <h3><span class="red">&#60;</span>full-stack web developer<span class="red">&#62;</span></h3>
       <p>i am a tokyo-based web developer, originally from brazil.<br>graduated from the le wagon web development bootcamp in june 2022.<br>checkout my socials below</p>
       <div class="home-sci">
         <a href="https://github.com/shindyhh" target="_blank"><i class='bx bxl-github'></i></a>
