added esports hub as the first project

--- a/index.html
+++ b/index.html
@@ -44,36 +44,25 @@
     </div>
   </section>
   <section class="portfolio" id="portfolio">
+    <div class="popup" id="popup">
+      <h2>test</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <button type="button" onclick="closePopup()">ok</button>
+    </div>
     <div class="container">
       <div class="wrapper-portfolio">
-        <div class="banner-image"></div>
-        <h1>coming soon</h1>
-        <p>Lorem ipsum dolor sit amet, <br/>
-          consectetur adipiscing elit.</p>
+        <div class="banner-esports"></div>
+        <h1>e-sports hub</h1>
+        <p>final project for the le wagon bootcamp <br/>
+        a platform where players can interact by posting content, following players,<br> direct message and even form a team environment with a group chat
+        </p>
       </div>
       <div class="button-wrapper">
         <button class="btn outline">code <i class='bx bxl-github'></i></button>
         <button class="btn fill" onclick="openPopup()">demo</button>
       </div>
     </div>
-    <div class="container">
-      <div class="wrapper-portfolio">
-        <div class="banner-image"></div>
-        <h1>coming soon</h1>
-        <p>Lorem ipsum dolor sit amet, <br/>
-          consectetur adipiscing elit.</p>
-      </div>
-      <div class="button-wrapper">
-        <button class="btn outline">code <i class='bx bxl-github'></i></button>
-        <button type="submit" class="btn fill">live demo</button>
-      </div>
-    </div>
   </section>
-  <div class="popup" id="popup">
-    <h2>test</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <button type="button" onclick="closePopup()">ok</button>
-  </div>
   <script src="script.js"></script>
 </body>
 </html>
