fixed text in esports hub projects

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       <div class="wrapper-portfolio">
         <div class="banner-esports"></div>
         <h1>e-sports hub</h1>
-        <p>final project for the le wagon bootcamp <br/>
-        a platform where players can interact by posting content, following players,<br> direct message and even form a team environment with a group chat
+        <p>final project for the le wagon coding bootcamp.<br/>
+        a platform where players can interact by posting content, following others,<br> direct message and even form a team environment with a group chat
         </p>
       </div>
       <div class="button-wrapper">
