fixed esportshub image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="container">
       <div class="wrapper-portfolio">
-        <div class="banner-esports"></div>
+        <img src="img/esportshub-img.JPG" alt="image of website interface" class="banner-esports">
         <h1>e-sports hub</h1>
         <p>final project for the le wagon coding bootcamp.<br/>
         a platform where players can interact by posting content, following others,<br> direct message and even form a team environment with a group chat
