--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
   </section>
   <section class="portfolio" id="portfolio">
     <div class="popup" id="popup">
-      <h2>test</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      <button type="button" onclick="closePopup()">ok</button>
+      <h2>eSports hub</h2>
+      <h5>developed with ruby on rails</h5>
+      <video width="350px" height="300px" controls="controls" src="media/esports-hub.mp4"></video>
+      <button type="button" onclick="closePopup()">close</button>
     </div>
     <div class="container">
       <div class="wrapper-portfolio">
