fixed popup button and background opacity

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </section>
   <section class="portfolio" id="portfolio">
     <div class="popup" id="popup">
-      <h2>eSports hub</h2>
+      <h2>e-sports hub</h2>
       <h5>developed with ruby on rails</h5>
       <video width="350px" height="300px" controls="controls" src="media/esports-hub.mp4"></video>
       <button type="button" onclick="closePopup()">close</button>
