improved buttons on portfolio section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
       <div class="button-wrapper">
         <button class="btn outline">code <i class='bx bxl-github'></i></button>
-        <button class="btn fill" onclick="openPopup()">demo</button>
+        <button class="btn fill" onclick="openPopup()">preview</button>
       </div>
     </div>
   </section>
