implemented active nav link

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <a href="#" class="logo">ばば しんじ</a>
 
     <nav class="navbar">
-      <a href="" class="active">home</a>
+      <a href="#home" class="active">home</a>
       <a href="#portfolio">portfolio</a>
       <a href="">contact</a>
     </nav>
   </header>
 
-  <section class="home">
+  <section class="home" id="home">
     <div class="home-image">
       <img src="img/profile.png" alt="">
     </div>
