--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-  <header class="header">
+  <header class="header nav-open">
     <a href="#" class="logo">ばば しんじ</a>
 
     <nav class="navbar">
@@ -25,6 +25,11 @@
       <a href="#portfolio">portfolio</a>
       <a href="">contact</a>
     </nav>
+
+    <button class="btn-mobile-nav">
+      <i class='bx bx-menu' ></i>
+      <i class='bx bx-x-circle' ></i>
+    </button>
   </header>
 
   <section class="home" id="home">
