fixed mobile nav bar

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </head>
 <body>
 
-  <header class="header nav-open">
+  <header class="header">
     <a href="#" class="logo">ばば しんじ</a>
 
     <nav class="navbar">
-      <a href="#home" class="active">home</a>
-      <a href="#portfolio">portfolio</a>
+      <a href="#home" class="active" id="home-link">home</a>
+      <a href="#portfolio" id="portfolio-link">portfolio</a>
       <a href="">contact</a>
     </nav>
 
