added proper link to button (code github)

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </p>
       </div>
       <div class="button-wrapper">
-        <button class="btn outline">code <i class='bx bxl-github'></i></button>
+        <button class="btn outline"><a href="https://github.com/shindyhh/esports-hub" target=”_blank”>code <i class='bx bxl-github'></i></a></button>
         <button class="btn fill" onclick="openPopup()">preview</button>
       </div>
     </div>
