removed buttons from second card in portfolio

--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
         <p><br><br></p>
       </div>
       <div class="button-wrapper">
-        <button class="btn outline"><a href="" target=”_blank”>code <i class='bx bxl-github'></i></a></button>
-        <button class="btn fill">preview</button>
+        <br>
+        <br>
+        <!-- <button class="btn outline"><a href="" target=”_blank”>soon <i class='bx bxl-github'></i></a></button>
+        <button class="btn fill">soon</button> -->
       </div>
     </div>
   </section>
