delete contact button navbar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar">
       <a href="#home" class="active" id="home-link">home</a>
       <a href="#portfolio" id="portfolio-link">portfolio</a>
-      <a href="">contact</a>
+      <!-- <a href="">contact</a> -->
     </nav>
 
     <button class="btn-mobile-nav">
