add second project title

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="wrapper-portfolio">
         <img src="https://images.unsplash.com/photo-1614332287897-cdc485fa562d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="image of website interface" class="banner-esports">
-        <h1>project x</h1>
+        <h1>omnifood project</h1>
         <p></p>
       </div>
       <div class="button-wrapper">
