fix text decoration

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="container">
       <div class="wrapper-portfolio">
-        <img src="img/esportshub-img.JPG" alt="image of website interface" class="banner-esports">
+        <img src="img/esportshub-img.JPG" alt="image of website interface" class="banner-projects">
         <h1>e-sports hub</h1>
         <p>final project for the le wagon coding bootcamp.<br/>
         a platform where players can interact by posting content, following others,<br> direct message and even form a team environment with a group chat
@@ -70,14 +70,14 @@
     </div>
     <div class="container">
       <div class="wrapper-portfolio">
-        <img src="https://images.unsplash.com/photo-1614332287897-cdc485fa562d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="image of website interface" class="banner-esports">
+        <img src="img/omnifood-website-view.JPG" alt="image of website interface" class="banner-projects">
         <h1>omnifood project</h1>
         <p>fully responsive landing page using html, css and javascript.<br>created with the help of a udemy course by Jonas Schmedtmann </p>
       </div>
       <div class="button-wrapper">
 
-        <!-- <button class="btn outline"><a href="" target=”_blank”>soon <i class='bx bxl-github'></i></a></button>
-        <button class="btn fill">soon</button> -->
+        <button class="btn outline"><a href="" target=”_blank”>code <i class='bx bxl-github'></i></a></button>
+        <button class="btn fill"><a href="https://shindyhh.github.io/omnifood/" target=”_blank”>live demo</a></button>
       </div>
     </div>
   </section>
