add link to buttons omnifood

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
       <div class="button-wrapper">
 
-        <button class="btn outline"><a href="" target=”_blank”>code <i class='bx bxl-github'></i></a></button>
+        <button class="btn outline"><a href="https://github.com/shindyhh/omnifood" target=”_blank”>code <i class='bx bxl-github'></i></a></button>
         <button class="btn fill"><a href="https://shindyhh.github.io/omnifood/" target=”_blank”>live demo</a></button>
       </div>
     </div>
