change text for omnifood

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="wrapper-portfolio">
         <img src="img/omnifood-website-view.JPG" alt="image of website interface" class="banner-projects">
         <h1>omnifood project</h1>
-        <p>fully responsive landing page using html, css and javascript.<br>created with the help of a udemy course by Jonas Schmedtmann </p>
+        <p>fully responsive website using html, css and javascript<br>created for a fictitious food delivery company.</p>
       </div>
       <div class="button-wrapper">
 
