--- a/index.html
+++ b/index.html
@@ -1,86 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>shindy baba | portfolio</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/queries.css" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>shindy baba | portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/queries.css">
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/earlyaccess/hannari.css"
+      rel="stylesheet"
+    />
 
+    <link rel="icon" href="img/baba.png" />
+  </head>
+  <body>
+    <header class="header">
+      <a href="#" class="logo">ばば しんじ</a>
 
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
+      <nav class="navbar">
+        <a href="#home" class="active" id="home-link">home</a>
+        <a href="#portfolio" id="portfolio-link">portfolio</a>
+        <!-- <a href="">contact</a> -->
+      </nav>
 
-  <link rel="icon" href="img/baba.png">
+      <button class="btn-mobile-nav">
+        <i class="bx bx-menu"></i>
+        <i class="bx bx-x-circle"></i>
+      </button>
+    </header>
 
-</head>
-<body>
-
-  <header class="header">
-    <a href="#" class="logo">ばば しんじ</a>
-
-    <nav class="navbar">
-      <a href="#home" class="active" id="home-link">home</a>
-      <a href="#portfolio" id="portfolio-link">portfolio</a>
-      <!-- <a href="">contact</a> -->
-    </nav>
-
-    <button class="btn-mobile-nav">
-      <i class='bx bx-menu' ></i>
-      <i class='bx bx-x-circle' ></i>
-    </button>
-  </header>
-
-  <section class="home" id="home">
-    <div class="home-image">
-      <img src="img/profile.png" alt="">
-    </div>
-    <div class="home-content">
-      <h1>hi, my name is <span class="red">shindy</span></h1>
-      <h3><span class="red">&#60;</span>full-stack web developer<span class="red">&#62;</span></h3>
-      <p>i am a tokyo-based web developer, originally from brazil.<br>graduated from the le wagon web development bootcamp in june 2022.<br>checkout my socials below</p>
-      <div class="home-sci">
-        <a href="https://github.com/shindyhh" target="_blank"><i class='bx bxl-github'></i></a>
-        <a href="https://www.linkedin.com/in/babashinji/" target=”_blank”><i class='bx bxl-linkedin-square' ></i></a>
-        <a href="mailto:shindyhh@gmail.com"><i class='bx bx-envelope' ></i></a>
-        <a href="https://api.whatsapp.com/send?phone=818098830898" target=”_blank”><i class='bx bxl-whatsapp'></i></a>
+    <section class="home" id="home">
+      <div class="home-image">
+        <img src="img/profile.png" alt="" />
       </div>
-    </div>
-  </section>
-  <section class="portfolio" id="portfolio">
-    <div class="popup" id="popup">
-      <h2>e-sports hub</h2>
-      <h5>developed with ruby on rails</h5>
-      <video width="350px" height="300px" controls="controls" src="media/esports-hub.mp4"></video>
-      <button type="button" onclick="closePopup()">close</button>
-    </div>
-    <div class="container">
-      <div class="wrapper-portfolio">
-        <img src="img/esportshub-img.JPG" alt="image of website interface" class="banner-projects">
-        <h1>e-sports hub</h1>
-        <p>final project for the le wagon coding bootcamp.<br/>
-        a platform where players can interact by posting content, following others,<br> direct message and even form a team environment with a group chat
+      <div class="home-content">
+        <h1>hi, my name is <span class="red">shindy</span></h1>
+        <h3>
+          <span class="red">&#60;</span>full-stack web developer<span
+            class="red"
+            >&#62;</span
+          >
+        </h3>
+        <p>
+          i am a tokyo-based web developer, originally from brazil.<br />graduated
+          from the le wagon web development bootcamp in june 2022.<br />checkout
+          my socials below
         </p>
+        <div class="home-sci">
+          <a href="https://github.com/shindyhh" target="_blank"
+            ><i class="bx bxl-github"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/babashinji/" target="”_blank”"
+            ><i class="bx bxl-linkedin-square"></i
+          ></a>
+          <a href="mailto:shindyhh@gmail.com"><i class="bx bx-envelope"></i></a>
+          <a
+            href="https://api.whatsapp.com/send?phone=818098830898"
+            target="”_blank”"
+            ><i class="bx bxl-whatsapp"></i
+          ></a>
+        </div>
       </div>
-      <div class="button-wrapper">
-        <button class="btn outline"><a href="https://github.com/shindyhh/esports-hub" target=”_blank”>code <i class='bx bxl-github'></i></a></button>
-        <button class="btn fill" onclick="openPopup()">preview</button>
+    </section>
+    <section class="portfolio" id="portfolio">
+      <div class="popup" id="popup">
+        <h2>e-sports hub</h2>
+        <h5>developed with ruby on rails</h5>
+        <video
+          width="350px"
+          height="300px"
+          controls="controls"
+          src="media/esports-hub.mp4"
+        ></video>
+        <button type="button" onclick="closePopup()">close</button>
       </div>
-    </div>
-    <div class="container">
-      <div class="wrapper-portfolio">
-        <img src="img/omnifood-website-view.JPG" alt="image of website interface" class="banner-projects">
-        <h1>omnifood project</h1>
-        <p>fully responsive website using html, css and javascript<br>created for a fictitious food delivery company.</p>
+      <div class="container">
+        <div class="wrapper-portfolio">
+          <img
+            src="img/esportshub-img.JPG"
+            alt="image of website interface"
+            class="banner-projects"
+          />
+          <h1>e-sports hub</h1>
+          <p>
+            final project for the le wagon coding bootcamp.<br />
+            a platform where players can interact by posting content, following
+            others,<br />
+            direct message and even form a team environment with a group chat
+          </p>
+        </div>
+        <div class="button-wrapper">
+          <button class="btn outline">
+            <a href="https://github.com/shindyhh/esports-hub" target="”_blank”"
+              >code <i class="bx bxl-github"></i
+            ></a>
+          </button>
+          <button class="btn fill" onclick="openPopup()">preview</button>
+        </div>
       </div>
-      <div class="button-wrapper">
-
-        <button class="btn outline"><a href="https://github.com/shindyhh/omnifood" target=”_blank”>code <i class='bx bxl-github'></i></a></button>
-        <button class="btn fill"><a href="https://shindyhh.github.io/omnifood/" target=”_blank”>live demo</a></button>
+      <div class="container">
+        <div class="wrapper-portfolio">
+          <img
+            src="img/omnifood-website-view.JPG"
+            alt="image of website interface"
+            class="banner-projects"
+          />
+          <h1>omnifood project</h1>
+          <p>
+            fully responsive website using html, css and javascript<br />created
+            for a fictitious food delivery company.
+          </p>
+        </div>
+        <div class="button-wrapper">
+          <button class="btn outline">
+            <a href="https://github.com/shindyhh/omnifood" target="”_blank”"
+              >code <i class="bx bxl-github"></i
+            ></a>
+          </button>
+          <button class="btn fill">
+            <a href="https://shindyhh.github.io/omnifood/" target="”_blank”"
+              >live demo</a
+            >
+          </button>
+        </div>
       </div>
-    </div>
-  </section>
-  <script src="script.js"></script>
-</body>
+    </section>
+    <script src="script.js"></script>
+  </body>
 </html>
