--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <h1>omnifood project</h1>
           <p>
             fully responsive website using html, css and javascript<br />created
-            for a fictitious food delivery company..
+            for a fictitious food delivery company.
           </p>
         </div>
         <div class="button-wrapper">
